--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -45,7 +45,7 @@ template(name='delta')
 
 template(name='facet')
     if filtering_res
-        .ui.divider
+        .ui.hidden.divider
         //- .ui.accordion
         //-     .active.title
         .ui.grey.inline.header 
