--- a/client/staff.jade
+++ b/client/staff.jade
@@ -1,6 +1,6 @@
 template(name='staff')
     h1.ui.center.aligned.grey.header 
-        i.user.shield.icon
+        +i name='user shield'
         |staff
     +schedule
     +shift_change_requests
