--- a/client/fields.jade
+++ b/client/fields.jade
@@ -66,7 +66,7 @@ template(name='icon_view')
         i.icon(class=field_value)
 
 
-template(name='icolor')
+template(name='i')
     img(src="https://img.icons8.com/color/48/000000/#{name}.png" class=classes)
 
 template(name='iblue')
