--- a/client/profile.jade
+++ b/client/profile.jade
@@ -36,7 +36,7 @@ template(name='profile')
                             .ui.circular.basic.label #{address}
                     .ui.profile_block.segment
                         .ui.grey.header 
-                            i.user.shield.icon
+                            +i name='user shield'
                             |roles
                         each roles
                             .ui.circular.basic.label #{this}                    
@@ -64,9 +64,9 @@ template(name='profile')
                             +user_guests
                             +user_card_replacements
                             +user_signatures
-                        if is_resident
-                            +user_following
-                            +follow_user
+                        //- if is_resident
+                        //-     +user_following
+                        //-     +follow_user
     
                 .four.wide.column
                     +user_log
@@ -79,6 +79,7 @@ template(name='profile')
                 .four.wide.column
                     if user_is_resident
                         +user_key
+                        +user_garden
                         +user_unit
                         +user_tags
                         +user_connections
@@ -93,14 +94,22 @@ template(name='profile')
 template(name='user_card_replacements')
     .ui.segment.profile_block
         .ui.grey.inline.center.aligned.header 
-            i.id.card.alternate.icon
+            +i name='card-exchange'
             |card replacements
+
+            
+template(name='user_garden')
+    .ui.segment.profile_block
+        .ui.grey.inline.center.aligned.header 
+            //- i.id.card.alternate.icon
+            +i name='garden-gloves'
+            |garden
 
             
 template(name='user_signatures')
     .ui.segment.profile_block
         .ui.grey.inline.center.aligned.header 
-            i.signature.icon
+            +i name='signature'
             | signatures
         .ui.link.large.list
             a.item(href='#') rules and regulations
@@ -143,17 +152,19 @@ template(name='gr_status')
 template(name='user_checkins')
     .ui.segment.profile_block
         .ui.grey.inline.center.aligned.header 
-            i.tasks.icon
+            +i name='internal'
             |check ins
         +checkin_button
-            
+        .ui.list
+            each healthclub_checkins
+                .item #{when}
             
             
             
 template(name='user_guests')
     .ui.segment.profile_block
         .ui.grey.inline.center.aligned.header 
-            i.id.card.alternate.icon
+            +i name='badge'
             |guests
         +goto_model slug='guest'
         .ui.link.large.list
@@ -168,7 +179,8 @@ template(name='user_guests')
 template(name='user_key')
     .ui.segment.profile_block
         .ui.grey.inline.center.aligned.header 
-            i.key.icon
+            //- i.key.icon
+            +i name='key'
             |key
         if is_admin
             +goto_model slug='key'
@@ -201,7 +213,8 @@ template(name='user_key')
 template(name='user_unit')
     .ui.segment.profile_block
         .ui.grey.inline.center.aligned.header 
-            i.home.icon
+            //- i.home.icon
+            +i name='interior'
             |unit
         +goto_model slug='unit'
         with unit
@@ -224,7 +237,7 @@ template(name='user_about')
 template(name='violations')
     .ui.segment.profile_block
         .ui.grey.inline.center.aligned.header 
-            i.exclamation.triangle.icon
+            +i name='foul'
             |violations
         +goto_model slug='violation'
 
@@ -257,7 +270,7 @@ template(name='user_log')
     //- .ui.fluid.styled.accordion.profile_block
     .ui.segment.profile_block
         .ui.grey.inline.center.aligned.header 
-            i.feed.icon
+            +i name='overview-pages-4'
             |log
         .smallscroll
             .ui.list
@@ -283,7 +296,7 @@ template(name='user_people')
 template(name='user_feed')
     .ui.cloud.segment
         .ui.grey.inline.header 
-            i.rss.icon
+            +i name='feed'
             |feed
         //- if current_user
         //-     .ui.fluid.input
@@ -295,7 +308,7 @@ template(name='user_feed')
 template(name='user_bookmarks')
     .ui.segment.profile_block
         .ui.grey.inline.center.aligned.header 
-            i.bookmark.icon
+            +i name='bookmark'
             |bookmarks
         .ui.list.smallscroll
             each bookmarks
@@ -331,7 +344,7 @@ template(name='user_tasks')
     //- .ui.fluid.styled.accordion.profile_block
     .ui.segment.profile_block
         .ui.grey.inline.center.aligned.header 
-            i.tasks.icon
+            +i name='tasks'
             |staff tasks
         +goto_model slug='task'
         .ui.icon.input
@@ -364,7 +377,8 @@ template(name='user_array_list')
 template(name='role_switcher')
     .ui.segment.profile_block
         .ui.grey.inline.center.aligned.header 
-            i.user.shield.blue.icon(title='role switcher')
+            +i name='user-shield'
+            //- i.user.shield.blue.icon(title='role switcher')
             |#{username} role switcher
         //- if is_eric
         //-     +user_array_element_toggle key='roles' value='dev' user=currentUser
@@ -394,7 +408,7 @@ template(name='user_tags')
     .ui.fluid.styled.accordion.profile_block
         .active.title
             .ui.grey.inline.center.aligned.header 
-                i.tags.icon
+                +i name='tags'
                 |tags
         .active.content
             each tags
