--- a/client/chat.jade
+++ b/client/chat.jade
@@ -15,7 +15,7 @@ template(name='chat_list')
             
             
 template(name='chat_list_item')
-    .ui.smoothed.segment.chat_list_item(href='#' class=chat_list_item_class)
+    .ui.smoothed.pointer.segment.chat_list_item(href='#' class=chat_list_item_class)
         .content
             .description
                 .ui.horizontal.list
@@ -77,11 +77,12 @@ template(name='view_chats')
             .four.wide.column
                 //- .ui.circular.label(title='Unread') #{unread_message_count} Unread
                 .ui.icon.circular.basic.button#create_chat(title='new channel')
-                    i.plus.large.icon
+                    +i name='plus'
                 .unread_icon(data-tooltip='Unread Messages' data-position='bottom center')
                     i.secured-letter.icon
-                .ui.inline.grey.header 
+                //- .ui.inline.grey.header 
                     i.tags.icon
+                +i name='tags'
                 +cloud filter='chat'
                 //- +participant_filter type='chat'
                 +chat_list
@@ -110,22 +111,24 @@ template(name='view_chat')
                 +chat_messages_pane this
             .four.wide.column
                 .ui.cloud.segment
-                    .ui.small.header 
-                        i.line.chart.icon
-                        |stats
-                    //- .ui.small.inline.header #{message_count} messages
-                    //- .ui.small.inline.header #{unread_message_count} unread
-                    .ui.small.header 
-                        i.align.left.icon
-                        |description
-                    |!{content}
+                    //- .ui.small.header 
+                    //-     i.line.chart.icon
+                    //-     |stats
+                    //- //- .ui.small.inline.header #{message_count} messages
+                    //- //- .ui.small.inline.header #{unread_message_count} unread
+                    //- .ui.small.header 
+                    //-     i.align.left.icon
+                    //-     |description
+                    //- |!{content}
                     .ui.small.inline.header
                         |participants
                         if currentUser
                             if in_chat
-                                i.sign.in.circular.link.icon.leave_chat(title='leave')
+                                //- i.sign.in.circular.link.icon.leave_chat(title='leave')
+                                +i name='leaving-queue' title='leave conversation' classes='leave_chat pointer'
                             else
-                                i.sign.out.circular.link.icon.join_chat(title='join')
+                                +i name='joining-queue' title='join conversation' classes='join_chat pointer'
+                                //- i.sign.out.circular.link.icon.join_chat(title='join')
                     .ui.relaxed.list
                         each participants
                             .item
@@ -141,11 +144,11 @@ template(name='view_chat')
                                         | @#{username}
                                         +user_status
                     if can_edit
-                        .ui.circular.basic.compact.button.close_chat(title='close chat')
-                            i.cancel.icon
-                            |close chat
+                        .ui.circular.basic.compact.icon.button.close_chat(title='close chat')
+                            +ismall name='cancel'
+                            //- |close chat
                     .ui.small.inline.grey.header 
-                        i.tags.icon
+                        +ismall name='tags'
                         | tags
                     if can_edit
                         +array_edit key='tags' label='tags' direct=true
