--- a/client/styles.css
+++ b/client/styles.css
@@ -26,7 +26,11 @@ body {
 }
 
 
-
+.pointer:hover{
+    cursor: pointer !important;
+    -webkit-filter: drop-shadow(5px 5px 5px #222);
+    filter:         drop-shadow(5px 5px 5px #222);
+}
 
 .profile_grid {
     position: absolute !important;
