--- a/client/fields.jade
+++ b/client/fields.jade
@@ -53,7 +53,8 @@ template(name='icon_edit')
             else
                 |#{this}    
         if field_value
-            i.large.icon(class=field_value)
+            //- i.large.icon(class=field_value)
+            img(src="https://img.icons8.com/color/48/000000/#{field_value}.png")
         input.icon_val(type='text' value=field_value placeholder='font awesome class')
 
 
@@ -63,11 +64,15 @@ template(name='color_icon_view')
 
 template(name='icon_view')
     if field_value
-        i.icon(class=field_value)
+        img(src="https://img.icons8.com/color/48/000000/#{field_value}.png")
+        //- i.icon(class=field_value)
 
 
 template(name='i')
-    img(src="https://img.icons8.com/color/48/000000/#{name}.png" class=classes)
+    img(src="https://img.icons8.com/color/48/000000/#{name}.png" class=classes title=title)
+
+template(name='ismall')
+    img(src="https://img.icons8.com/color/24/000000/#{name}.png" class=classes title=title)
 
 template(name='iblue')
     img(src="https://img.icons8.com/ultraviolet/40/000000/#{name}.png" class=classes)
