--- a/client/users.jade
+++ b/client/users.jade
@@ -149,7 +149,7 @@ template(name='user')
                 h2.ui.center.aligned.header #{first_name} #{last_name} 
                 .ui.small.grey.header @#{username}
             each five_tags
-                .ui.compact.small.circular.button.person_tag(class=tag_class) 
+                .ui.compact.small.circular.basic.button.person_tag(class=tag_class) 
                     strong #{this}
             +text_view key='first_name' label='First Name'
             +text_view key='last_name' label='Last Name'
